components/hac-pact-broker/postgreservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pact-broker
  name: postgresql-pact-broker
spec:
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: pact-broker
    deploymentconfig: postgresql-pact-broker
  sessionAffinity: None
  type: ClusterIP
