components/hac-pact-broker/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pact-broker
  name: pact-broker
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pact-broker
  sessionAffinity: None
  type: ClusterIP
