components/hac-pact-broker/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pact-broker
  name: pact-broker
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: pact-broker
    weight: 100
  wildcardPolicy: None
